# docking_robot

./: .dockerignore  Dockerfile  README.md  compose.amdgpu.yaml  compose.nvidia.yaml  compose.yaml  docking_robot.repos
docking_bringup/: CMakeLists.txt  package.xml
docking_bringup/launch/: docking.launch.py
docking_bringup/rviz/: docking.rviz
docking_docking/: CMakeLists.txt  package.xml
docking_docking/config/: apriltag_node.yaml  nav2_docking_server.yaml
docking_docking/docking_docking/: apriltag_dock_detector_node.py
docking_docking/launch/: docking.launch.py
docking_docking/scripts/: apriltag_dock_detector
docking_gazebo/: CMakeLists.txt  package.xml
docking_gazebo/config/: components.yaml  gazebo_gui.config
docking_gazebo/launch/: simulation.launch.py
docking_gazebo/sdf/: warehouse.sdf
docking_navigation/: CMakeLists.txt  package.xml
docking_navigation/behavior_trees/: nav_to_pose.xml
docking_navigation/config/: nav2.costmap.yaml  nav2.yaml
docking_navigation/launch/: nav2.launch.py  navigation.launch.py
docking_robot/: CMakeLists.txt  package.xml
