<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>docking_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rayferric@todo.todo">rayferric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <!-- <exec_depend>sdformat_urdf</exec_depend> -->
  <exec_depend>rviz2</exec_depend>
  <!-- <exec_depend>joint_state_publisher_gui</exec_depend> -->
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>nav2_common</exec_depend> <!-- missing dependency in panther_gazebo/simulate_robot.launch.py -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
